# nRF9160dk-balancing-robot

./: .gitignore  README.md  west.yml
FreeCad_files/: robot_nRF9160.FCStd
nRF9160/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
nRF9160/boards/: nrf52dk_nrf52832.overlay  nrf9160dk_nrf9160_ns.overlay
nRF9160/configuration/nrf52dk_nrf52832/: click_detector_def.h  nrf52dk_nrf52832.overlay  prj.conf
nRF9160/configuration/nrf9160dk_nrf9160_ns/: buttons_def.h  click_detector_def.h  nrf9160dk_nrf9160_ns.overlay  prj.conf
nRF9160/drivers/: CMakeLists.txt
nRF9160/drivers/motors/: CMakeLists.txt  motor.h
nRF9160/drivers/mpu9250/: CMakeLists.txt  app_mpu.c  eulerconversion.c  inv_mpu.c  inv_mpu_dmp.c  twi.c
nRF9160/drivers/mpu9250/include/: MPU9250_RegisterMap.h  app_mpu.h  eulerconversion.h  inv_mpu.h  twi.h
nRF9160/drivers/qdec_gpio/: Kconfig  qdec_gpio.c
nRF9160/drivers/qdec_pca63539/: CMakeLists.txt  Kconfig  qdec_pca63539.c
nRF9160/drivers/tb6612fng/: CMakeLists.txt  Kconfig  tb6612fng_motor.c
nRF9160/dts/bindings/: nordic,pca63539-qdec.yaml  st,stspin240.yaml  toshiba,tb6612fng.yaml
nRF9160/src/: imu.c  main.c
nRF9160/src/events/: CMakeLists.txt  Kconfig  imu_module_event.c  imu_module_event.h  qdec_module_event.c  qdec_module_event.h
nRF9160/src/ext_sensors/: ext_sensors.c  ext_sensors.h
nRF9160/src/modules/: CMakeLists.txt  Kconfig  Kconfig.controller_module  Kconfig.imu_module  Kconfig.modules_common  Kconfig.qdec_module  controller_module.c  imu_module.c  modules_common.c  modules_common.h  qdec_module.c
nRF9160/src/util/: CMakeLists.txt  Kconfig  eulerconversion.c  eulerconversion.h  pid.c  pid.h
nRF9160/src/util/dmp/: sensor_processing_lib.c  sensor_processing_lib.h
nRF9160_nRF52840_pin_routings/: CMakeLists.txt  README.md
nRF9160_nRF52840_pin_routings/boards/: nrf9160dk_nrf52840.overlay
nRF9160_nRF52840_pin_routings/src/: main.c
